--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,5 +29,7 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
+adapter: postgresql
+
 en:
   hello: "Hello world"
